@@ -38,10 +38,11 @@ type kind =
   | Argument
   | Live
 
-let interval_list = ref ([] : t list)
-let fixed_interval_list = ref ([] : t list)
-let all_intervals() = !interval_list
-let all_fixed_intervals() = !fixed_interval_list
+type result =
+  {
+    intervals : t list;
+    fixed_intervals : t list;
+  }
 
 (* Check if two intervals overlap *)
 
@@ -167,19 +168,22 @@ let build_intervals fd =
     end in
   walk_instruction fd.fun_body;
   (* Generate the interval and fixed interval lists *)
-  interval_list := [];
-  fixed_interval_list := [];
+  let interval_list = ref [] in
+  let fixed_intervals = ref [] in
   Array.iter
     (fun i ->
       if i.iend != 0 then begin
         i.ranges <- List.rev i.ranges;
         begin match i.reg.loc with
           Reg _ ->
-            fixed_interval_list := i :: !fixed_interval_list
+            fixed_intervals := i :: !fixed_intervals
         | _ ->
             interval_list := i :: !interval_list
         end
       end)
     intervals;
-  (* Sort the intervals according to their start position *)
-  interval_list := List.sort (fun i0 i1 -> i0.ibegin - i1.ibegin) !interval_list
+  {
+    fixed_intervals = !fixed_intervals;
+    intervals = List.sort (fun i0 i1 -> i0.ibegin - i1.ibegin) !interval_list;
+    (* Sort the intervals according to their start position *)
+  }
